create averages for each statistical category

--- a/Project Setup.ipynb
+++ b/Project Setup.ipynb
@@ -845,7 +845,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1255,6 +1257,57 @@
     "ncaa_stats_df = ncaa_stats_df.reset_index(drop = True)\n",
     "ncaa_stats_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we included averages for each stat in the dataframe in order to make data analysis in the next notebook a lot easier to do and making plotting more intuitive. Having averages for stats is more accurate than total stats, considering not all player have played the same amount of games. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nba_stats_df[\"PPG\"] = ''\n",
+    "nba_stats_df[\"APG\"] = ''\n",
+    "nba_stats_df[\"TPG\"] = ''\n",
+    "nba_stats_df[\"BPG\"] = ''\n",
+    "nba_stats_df[\"SPG\"] = ''\n",
+    "nba_stats_df[\"RPG\"] = ''\n",
+    "ncaa_stats_df[\"PPG\"] = ''\n",
+    "ncaa_stats_df[\"APG\"] = ''\n",
+    "ncaa_stats_df[\"TPG\"] = ''\n",
+    "ncaa_stats_df[\"BPG\"] = ''\n",
+    "ncaa_stats_df[\"SPG\"] = ''\n",
+    "ncaa_stats_df[\"RPG\"] = ''\n",
+    "\n",
+    "for index, row in nba_stats_df.iterrows():\n",
+    "    player = nba_stats_df.iloc[[index]]\n",
+    "    nba_stats_df.loc[index, \"PPG\"] = float(player[\"Career Points\"] / player[\"Career Games\"])\n",
+    "    nba_stats_df.loc[index, \"APG\"] = float(player[\"Career Assists\"] / player[\"Career Games\"])\n",
+    "    nba_stats_df.loc[index, \"TPG\"] = float(player[\"Career Turnovers\"] / player[\"Career Games\"])\n",
+    "    nba_stats_df.loc[index, \"BPG\"] = float(player[\"Career Blocks\"] / player[\"Career Games\"])\n",
+    "    nba_stats_df.loc[index, \"SPG\"] = float(player[\"Career Steals\"] / player[\"Career Games\"])\n",
+    "    nba_stats_df.loc[index, \"RPG\"] = float(player[\"Career Off Rebounds\"] / player[\"Career Games\"]) + float(player[\"Career Def Rebounds\"] / player[\"Career Games\"])\n",
+    "for index, row in ncaa_stats_df.iterrows():\n",
+    "    player = ncaa_stats_df.iloc[[index]]\n",
+    "    ncaa_stats_df.loc[index, \"PPG\"] = float(player[\"Career Points\"] / player[\"Career Games\"])\n",
+    "    ncaa_stats_df.loc[index, \"APG\"] = float(player[\"Career Assists\"] / player[\"Career Games\"])\n",
+    "    ncaa_stats_df.loc[index, \"TPG\"] = float(player[\"Career Turnovers\"] / player[\"Career Games\"])\n",
+    "    ncaa_stats_df.loc[index, \"BPG\"] = float(player[\"Career Blocks\"] / player[\"Career Games\"])\n",
+    "    ncaa_stats_df.loc[index, \"SPG\"] = float(player[\"Career Steals\"] / player[\"Career Games\"])\n",
+    "    ncaa_stats_df.loc[index, \"RPG\"] = float(player[\"Career Off Rebounds\"] / player[\"Career Games\"]) + float(player[\"Career Def Rebounds\"] / player[\"Career Games\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
