changed python notebook title to include underscore

--- a/Project_Setup.ipynb
+++ b/Project_Setup.ipynb
@@ -1303,11 +1303,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, this saves both dataframes to csv file in order to prevent the need for running these cells again. This may take some time to run considering the request of ~800 player dataframes and objects, so loading these csv files are recommended."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nba_stats_df.to_csv('NBA_Data.csv', index = False)\n",
+    "ncaa_stats_df.to_csv('NCAA_Data.csv', index = False)"
+   ]
   }
  ],
  "metadata": {
