college height and nba box plus minus graph

--- a/Project_Analysis.ipynb
+++ b/Project_Analysis.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because certain players had a place holder -999 for stats that weren't present, we can replace them with Nan values now in order to make sure they do not get plotted and also prevent them from skewing the data"
+    "Because certain players had a place holder -999 for stats that weren't present, we can replace them with Nan values now in order to make sure they do not get plotted and also prevent them from skewing the data."
    ]
   },
   {
@@ -283,7 +283,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally this ensures that only names found in both datasets are included, and makes sure they are the same size. This is done again from the previous notebook as a failsafe, as if they do not share the same names list, the plot will not work"
+    "Finally this ensures that only names found in both datasets are included, and makes sure they are the same size. This is done again from the previous notebook as a failsafe, as if they do not share the same names list, the plot will not work."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nbanames = list(nba_df[\"Name\"])\n",
+    "ncaa_df = ncaa_df[ncaa_df['Name'].isin(nbanames)]\n",
+    "ncaa_df = ncaa_df.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Individual Stats Scatter Plots and Box Plots\n",
+    "This is where individual stats from each dataframe gets plotted, first with a scatterplot. Where the x-axis represents an NCAA statistic, and the y-axis represents the same player's statistic in the NBA. These statistics can vary, of course, as they are meant to represent how one statistic from college carries over to another in the NBA. \n",
+    "Finally, a red horizontal line represents the average statistic from the NBA, and the vertical line represents the average statistic in the NCAA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When it comes to the bar plot, each player gets categorized into below average in college and above average in the NBA(- College + NBA), above average college and above average NBA (+ College + NBA), both in blue, and the opposite, (- College - NBA) and (+College - NBA) in red. Where the college stat is the one specified as the x-axis in the scatter plot, and the NBA stat is the y-axis is the corresponding NBA statistic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NCAA height vs NBA Box Plus Minus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Box plus minus is a stat that tells how a player contributes to winning when the player is on the court. For example, a -3 indicates when the player was playing, the team was 3 points behind the oppenent. "
    ]
   }
  ],
